[package]
name = "domain-scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
thiserror = "1.0.32"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0.144", features = ["derive"] }
rayon = "1.5.3"
trust-dns-resolver = "0.21.2"
