[package]
name = "domain-scanner"
version = "0.1.1"
edition = "2021"
authors = ["Max Kul <kma.memo@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to scan subdomains and open ports"
readme = "README.md"
homepage = "https://github.com/maxkulish/domain-scanner"
repository = "https://github.com/maxkulish/domain-scanner"
keywords = ["cli", "subdomains", "port-scanner"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
thiserror = "1.0.32"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0.144", features = ["derive"] }
rayon = "1.5.3"
trust-dns-resolver = "0.21.2"
clap =  { version = "3.2.17", features = ["derive"] }
